2006-03-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/canvas.n: Added note that stipples are not well-supported on
	non-X11 platforms. [Bug 220787] It's not a great solution, but it does
	indicate the state of affairs that has existed for years anyway; not
	much modern software uses stipples anyway.

2006-03-07  Don Porter  <dgp@users.sourceforge.net>

	* READNE:		Bump version number to 8.4.13 and update
	* changes:		changes to start prep for an 8.4.13 release.
	* generic/tk.h:
	* unix/configure{.in}:
	* unix/tk.spec:
	* win/configure{.in}:

2006-03-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in: convert _NATIVE paths to use / to avoid ".\"
	path-as-escape issue.

	* unix/tcl.m4, win/tcl.m4: []-quote ac_defun functions.

	* macosx/tkMacOSXDraw.c (TkPutImage): fix endian issue on OS X x86
	displaying images.  Bitmap images still have a black/white
	reversal issue, appears to be a general OS X issue (as seen in
	frogger demo).

2006-03-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tcl.m4:    Fix for tk bug #1334613 to sort out shared library
	* unix/configure: issues on NetBSD. Regenerated configure script.

2006-02-27  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkBitmap.c (Tk_GetBitmapFromData): Improve thread-safety.
	[Bug 470322]

	* generic/tkImgBmap.c (ImgBmapConfigureInstance): Force creation of
	new Pixmaps before deletion of old ones to prevent stupid caching
	problems. [Bug 480862]

2006-02-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tk.decls:             fix signature of TkMacOSXInvalClipRgns
	* generic/tkPlatDecls.h:        to use Tk_Window instead of internal	
	* macosx/tkMacOSXSubwindows.c:  type TkWindow (which led to any include 
	* macosx/tkMacOSXWindowEvent.c: of public header tkMacOSX.h requiring
	* macosx/tkMacOSXWm.c:          prior include of tkInt.h).
	
	* generic/tk.h:          move TkAqua specific REDO_KEYSYM_LOOKUP define