@@ -1,3 +1,8 @@
+2006-03-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* library/bgerror.tcl (::tk::dialog::error::bgerror): Truncated error
+	details were getting lost, leading to unreadable error messages.
+
 2006-03-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/canvas.n: Added note that stipples are not well-supported on
